--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -15,7 +15,7 @@ El robot ha sido diseñado con una topología inspirada en los vehículos de exp
 Algunos elementos sin funcionalidad estructural, como los encoders o el soporte de la cámara, han sido fabricados mediante impresión 3D. Todos los modelados pueden encontrarse en la sección hardware de GITHUB.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.6\textwidth]{images/wheele_stl}
+	\includegraphics[width=.6\textwidth]{images/hw/wheele_stl}
 	\caption{Modelo CAD del robot}
 \end{figure}
 \\
@@ -41,7 +41,7 @@ Debido a las bajas prestaciones y requerimientos de los motores, se ha optado po
 Por comodidad y robustez, se ha diseñado en \textit{KiCad} una placa de circuito impreso muy simple que facilita el cableado y permite integrar algún componente pasivo (como diodos fly-back o capacidades de by-pass). Gracias al laboratorio de electrónica este diseño ha sido revelado sobre una placa de una sola cara, obteniendo, como se aprecia en las imágenes, un acabado final bastante bueno.
  \begin{figure}[h!]
  	\centering
- 	\includegraphics[width=.6\textwidth]{images/hw/pcb_kicad}
+ 	\includegraphics[width=.2\textwidth]{images/hw/pcb_kicad}
  	\caption{Diseño en KiCad de la PCB.}
  \end{figure}
   \begin{figure}[h!]
