--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -69,3 +69,15 @@
   booktitle = {Proceedings of the 13th International Conference on Intelligent Autonomous Systems (IAS-13)},
   publisher = {Springer}
 }
+
+@article{hornung13auro,
+  author = {Armin Hornung and Kai M. Wurm and Maren Bennewitz and Cyrill
+  Stachniss and Wolfram Burgard},
+  title = {{OctoMap}: An Efficient Probabilistic {3D} Mapping Framework Based
+  on Octrees},
+  journal = {Autonomous Robots},
+  year = 2013,
+  url = {http://octomap.github.com},
+  doi = {10.1007/s10514-012-9321-0},
+  note = {Software available at \url{http://octomap.github.com}}
+}
