--- a/docs/latex/orb_cite.bib
+++ b/docs/latex/orb_cite.bib
@@ -81,3 +81,13 @@
   doi = {10.1007/s10514-012-9321-0},
   note = {Software available at \url{http://octomap.github.com}}
 }
+@misc{pigpio,
+  author = {joan2937},
+  title = {{C,C++} library for control of the Raspberry {GPIO}},
+  month={November},
+  year = {2018},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/joan2937/pigpio}},
+  commit = {34b33c3bf3c6f302539b9fcd0dfff52bd83a21a5}
+}
