--- a/docs/latex/1hard.tex
+++ b/docs/latex/1hard.tex
@@ -15,7 +15,7 @@ El robot ha sido diseñado con una topología inspirada en los vehículos de exp
 Algunos elementos sin funcionalidad estructural, como los encoders o el soporte de la cámara, han sido fabricados mediante impresión 3D. Todos los modelados pueden encontrarse en la sección hardware de GITHUB.
 \begin{figure}[h!]
 	\centering
-	\includegraphics[width=.6\textwidth]{images/wheele_stl}
+	\includegraphics[width=.6\textwidth]{images/hw/wheele_stl}
 	\caption{Modelo CAD del robot}
 \end{figure}
 \\
@@ -38,7 +38,7 @@ La disposición geométrica es la de un vehículo diferencial, con tres pares de
 \end{itemize}
 \subsubsection{Drivers}
 Debido a las bajas prestaciones y requerimientos de los motores, se ha optado por los drivers más asequibles disponibles: tres microchips L293D que integra cada uno dos puentes H. Como se explica más detenidamente en la seccion SOFEWARE, estos puentes H nos permiten configurar la dirección de giro con dos señales digitales y la velocidad con otras dos señales analógicas.\\
-Por comodidad y robustez, se ha diseñado en \textit{KiCad} una placa de circuito impreso muy simple que facilita el cableado y permite integrar algún componente pasivo (como diodos fly-back o capacidades de by-pass). Gracias al laboratorio de electrónica este diseño ha sido revelado sobre una placa de una sola cara, obteniendo, como se aprecia en las imágenes, un acabado final bastante bueno.
+Por comodidad y robustez, se ha diseñado en \textit{KiCad} una placa de circuito impreso muy simple que facilita el cableado y permite integrar algún componente pasivo (como diodos fly-back o capacidades de by-pass). Gracias al laboratorio de electrónica este diseño ha sido revelado sobre una placa de una sola cara, obteniendo, como se aprecia en las imágenes, un acabado final bastante bueno.\\
  \begin{figure}[h!]
  	\centering
  	\includegraphics[width=.6\textwidth]{images/hw/pcb_kicad}
@@ -49,9 +49,11 @@ Por comodidad y robustez, se ha diseñado en \textit{KiCad} una placa de circuit
   	\includegraphics[width=.6\textwidth]{images/hw/pcb_img}
   	\caption{Acabado final de la PCB revelada.}
   \end{figure}
+ Los microchips requieren de una referencia de tensión lógica (para operar la señal de entrada correctamente) y de una fuente de potencia capaz de alimentar los motores. La referencia se consigue de una salida de cinco voltios del arduino, que será quien se comunique con el driver. La alimentación de los motores corre a cargo de un transformador externo de 12V y XA.
 	
 \subsection{Encoders}
-Los sensores elegidos para medir la velocidad de cada rueda y estimar la posición y velocidad del robot, son unos sencillos encoders ópticos binarios junto a unos discos perforados. Al pasar la luz por una perforación del disco, que gira a la misma velocidad que la rueda, se manda una señal digital al micro. Contabilizando los flancos de subida o de bajada en cierto periódo de tiempo, y conociendo las dimensiones del disco, se obtiene una estimación de la velocidad. Para más detalles en este proceso dirigirese a la ventanilla 3 seccion software encoders GRACIAS. 
+Los sensores elegidos para medir la velocidad de cada rueda y estimar la posición y velocidad del robot, son unos sencillos encoders ópticos binarios junto a unos discos perforados. Al pasar la luz por una perforación del disco, que gira a la misma velocidad que la rueda, se manda una señal digital al micro. Contabilizando los flancos de subida o de bajada en cierto periódo de tiempo, y conociendo las dimensiones del disco, se obtiene una estimación de la velocidad. Para más detalles en este proceso dirigirese a la ventanilla 3 seccion software encoders GRACIAS. \\
+La corriente necesaria para que funcionen correctamente los encoders es mínima, por lo que se alimentan desde una salida de cinco voltios de baja potencia del arduino.
  \begin{figure}[h!]
  	\centering
  	\includegraphics[width=.6\textwidth]{images/hw/encoder_img}
@@ -72,7 +74,7 @@ Como ya se ha mencionado con anterioridad, se ha escogido una IMU mpu-6050 de se
 	\item Bus i2c para ejecutar operaciones de lectura y escritura en cualquier registro del chip a una frecuencia máxima de 400kHz.
 	\item Bus de comunicación auxiliar que posibilita introducir un magnetómetro en el futuro sin modificar el conexianado de todo el sistema.
 \end{itemize}
-
+Puesto que la IMU consume muy poca potencia en todo momento, se puede alimentar sin problemas desde cualquier salida de referencia de la Raspberry. 
 
 \subsection{Ordenador de a bordo}
 Debido a la multitud de entradas y salidas digitales y analógicas necesarias, al coste computacional de todo el sistema, y a la variedad de las comunicaciones, se plantea una configuración muy modular entre el ordenador de abordo (la \textit{Raspberry Pi}), los periféricos y la unidad de procesamiento para las partes más pesadas del software.\\
@@ -81,8 +83,16 @@ Debido a la multitud de entradas y salidas digitales y analógicas necesarias, a
   	\includegraphics[width=.7\textwidth]{images/hw/wheele_esquema}
   	\caption{Esquema de conexionado de todos los componentes}
   \end{figure}\\
-
 \subsubsection{Raspberry Pi}
-\subsubsection{Arduino}
-\subsection{Cámaras empleadas}
+Este \textit{single-boar computer}, como se le denomina en inglés, alberga muchas posibilidades. En el centro de todas ellas se encuentra un procesado ARM Cortex-A53 de 64-bit a 1.4Ghz capaz de correr varias distribuciones de GNU/linux. Con la limitada potencia gráfica de la que dispone, y su único gigabyte de memoria RAM resulta necesario procesar los cálculos más complejos en otro sistema más potente.\\
+El modelo utilizado (3B+) incluye WiFi 802.11n a 150Mbit/s máximo. Sin embargo, es conveniente usar una antena WiFi externa más potente para conseguir más rango de señal.\\
+La Raspberry es alimentada a través de un puerto micro USB a 5V con una corriente máxima de 2.5A aunque su lógica funciona a 3.3V.
+\subsubsection{Arduino Uno}
+Por conveniencia se ha optado por una placa arduino, que además de un microcontrolador ATmega328p, integra un puerto usb con un chipset que facilita su programación y la comunicación serie con el mismo. Incluye también un cristal de cuarzo , que provee una fuente prescisa para la señal de reloj y resulta especialmente útil para implementar el control de bajo nivel.\\
+El micro cuenta con una memoria flash progamable de 32 kilobytes y una eeprom de un kilobyte, que es más que suficiente para el uso que se le va a dar. Dos timers de 8 bits y otro de 16 bits generan las interrumpciones necesarias para controlar el tiempo real e implementar el control. De todas las 23 posibles entradas/salidas digitales del micro, se ocupan cuatro salidas para seleccionar el sentido de la marcha de los motores (dos para todos las ruedas de la izquierda y dos para las de la derecha) y seis canales PWM para controlar la velocidad individual de cada uno.\\
+La potencia eléctrica necesaria para que el micro, y sus periféricos, operen correctamente (5V y menos de 100mA) se obtienen por el puerto USB desde la Raspberry Pi, aprovechando el bus de comunicación serie.
+
+\subsection{Cámara}
+La \textit{Kinect for Xbox 360} integra una cámara RGB y un sensor de profundidad de luz infrarroja estructurada. El rango del sensor de profundidad alcanza, aproximadamente, de los 0.7 a los seis o siete metros. El campo de visión del dispositivo es de 57º horizontalmente y 43º en la vertical, aunque cuenta con un soporte motorizado capaz de inclinar la cámara MASMENOS 27º verticalmente. La resolución máxima de la cámara es de 1280x1024 píxeles, pero la más usada es 640x480 píxeles puesto que el frame rate depende fuertemente de la resolución con la que se trabaje, con un techo en los 30Hz.\\
+La Kinect emplea un conector propietario que no es más que un conector USB con dos líneas de alimentación adicionales a 12 voltios.  
 \subsection{Conexionado}
